# sysmon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
homebrew/: sysmon.rb
src/: config.rs  db.rs  embedded.rs  main.rs  models.rs  server.rs  ws.rs
src/actions/: cleanup.rs  kill.rs  mod.rs
src/handlers/: actions.rs  containers.rs  gpu.rs  health.rs  history.rs  metrics.rs  mod.rs  ports.rs  processes.rs  temperature.rs
src/metrics/: container.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  ports.rs  process.rs  temperature.rs
src/service/: linux.rs  macos.rs  mod.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/components/: AlertsBanner.svelte  AlertsCompact.svelte  ColumnPicker.svelte  ConfirmModal.svelte  ContainerPanel.svelte  ContainersCompact.svelte  CpuChart.svelte  CpuCoresChart.svelte  CpuCoresCompact.svelte  CpuSparkline.svelte  DiskCompact.svelte  DiskPanel.svelte  GpuCompact.svelte  Header.svelte  LoadAverage.svelte  LoadCompact.svelte  MemoryCompact.svelte  MemoryGauge.svelte  MetricPill.svelte  NetworkCompact.svelte  NetworkPanel.svelte  PortsCompact.svelte  ProcessActions.svelte  ProcessDetailDrawer.svelte  ProcessTable.svelte  Sidebar.svelte  SignalPicker.svelte  StaleCompact.svelte  StalePanel.svelte  SystemOverview.svelte  TemperatureCompact.svelte  TimeSeriesChart.svelte
ui/src/lib/stores/: metrics.ts  metricsHistory.ts  navigation.ts  processState.ts
ui/src/routes/: +page.svelte
(+9 files in other folders)
