[package]
name = "sysmon"
version = "0.1.0"
edition = "2021"
description = "Lightweight system monitoring dashboard"
license = "MIT"
repository = "https://github.com/user/sysmon"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tokio-stream = "0.1"
webbrowser = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
